--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,8 +3,8 @@
     <nav>
       <div class="logo">SKEELS PORTAL</div>  
       <a routerLink="/">Home</a>  
-      <a routerLink="/hjkf">Post a Job</a>  
-      <a routerLink="/nnvdj">Get Started</a>  
+      <a routerLink="/login">Post a Job</a>  
+    <a routerLink="/login">Get Started</a>  
     </nav>  
   </header>  
 
