made changes to the landingpage

--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -6,6 +6,7 @@
       <a routerLink="/about">About Us</a>
       <button class="btn btn-post" (click)="onPostJob()">Post A Job</button>
       <button class="btn btn-sign" (click)="onRegister()">Sign In/Up</button>
+      <button class="btn btn-sign" (click)="onadmin()">Monitor</button>
     </div>
   </nav>
 
